# blurring

./: .gitignore  README.md  build.sh  configure.sh  configure_debug.sh  configure_release.sh  debug.c  debug.h  debug_output.cpp  debug_output.h  edge.frag  lsan.supp  main.c  meson.build  shader.frag  shader.vert  test.frag  util.c  util.h
nodejs/: package.json
nodejs-blur/: index.ts
nodejs-impl/: index.ts  pnpm-lock.yaml
opengl/: .gitignore  Makefile  build.sh  debug.c  debug.cpp  debug.h  main.c  meson.build  util.h
opengl/wayland/: init_wayland.c  shm.c  shm.h
